--- a/K8S/templates/ingress.yaml
+++ b/K8S/templates/ingress.yaml
@@ -5,7 +5,27 @@ metadata:
   # namespace: application
 spec:
   rules:
-  - http:
+  - host: www.example.com
+    http:
+      paths:
+      - backend:
+          service:
+            name: weather
+            port:
+              number: 8000
+        path: /
+        pathType: Exact  # Prefix
+
+---
+
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: ingress-controller
+  # namespace: application
+spec:
+  rules:
+    http:
       paths:
       - backend:
           service:
